modalbutton border none

--- a/Design/index.html
+++ b/Design/index.html
@@ -380,7 +380,7 @@
                     <span class="title_content big">자신의 <br> 협업스타일</span>
                     <textarea class="txtfield big" id="Collaboration"></textarea>
                 </div>
-                <button type="submit" id="memberAddButton">등록하기</button>
+                <button type="submit" class="modal-button" id="memberAddButton">등록하기</button>
                 <button type="button" class="modal-button" onclick="closeModal('memberaddModal')">취소</button>
             </form>
         </div>
