--- a/Design/index.html
+++ b/Design/index.html
@@ -342,7 +342,7 @@
                 <div class="input-container"><input type="password" id="signUpPassword" placeholder="Password" /></div>
                 <div class="input-container"><input type="password" id="signUpCheckPassword"
                         placeholder="One more password" /></div>
-                <button type="submit" id="signUpButton">회원가입 하기</button>
+                <button type="submit" class="modal-button" id="signUpButton">회원가입 하기</button>
                 <button type="button" class="modal-button" onclick="closeModal('signupModal')">취소</button>
             </form>
         </div>
@@ -356,7 +356,7 @@
                 <h1>로그인</h1>
                 <div class="input-container"><input type="email" id="signInEmail" placeholder="Email" /></div>
                 <div class="input-container"><input type="password" id="signInPassword" placeholder="Password" /></div>
-                <button type="submit" id="signInButton">로그인 하기</button>
+                <button type="submit" class="modal-button" id="signInButton">로그인 하기</button>
                 <button type="button" class="modal-button" onclick="closeModal('loginModal')">취소</button>
                 <div id="loginError" style="color: red; display: none;">이메일 또는 비밀번호를 확인해주세요.</div>
 
