fix: text and cat animation transform style

--- a/Design/index.html
+++ b/Design/index.html
@@ -318,10 +318,10 @@
         <div class="background-image"></div>
         <div class="cat-image"></div>
         <div class="text-content">
-            <p class="fade-text">안녕하세요! 저희는 "꽁꽁 얼어붙은 얼음위를 고양이가 걸어다닙니다" 조입니다.</p>
-            <p class="fade-text">저희는 좋은 개발자가 되는 것을 목표로 열심히 성장해나가는 팀원들이 모여있습니다.</p>
-            <p class="fade-text">앞으로도 더욱 더 노력하여 자신만의 색을 가진 개발자가 되도록 노력하겠습니다.</p>
-            <p class="fade-text">모두들 파이팅!!!</p>
+            <p class="fade-text"> 꽁꽁 얼어붙은 얼음위를 고양이가 걸어다닙니다 </p>
+            <p class="fade-text"> 저희는 멋진 백엔드 개발자가 되는것을 목표를 가진 "꽁냥이" 조입니다 </p>
+            <p class="fade-text"> 꽁냥이 동료가 되실분은 팀원카드를 작성해주세요! </p>
+            <p class="fade-text"> 우리 모두 앞으로 파이팅!!! </p>
         </div>
 
     </div>
@@ -568,9 +568,8 @@
 
     // 고양이 이미지와 배경 이미지 이동 애니메이션 유지
     const catImage = document.querySelector('.cat-image');
-    if (catImage) catImage.style.transform = `translateX(${scrollPercent * 500}%)`;
+    if (catImage) catImage.style.transform = `translateX(${scrollPercent * 300}%)`;
     const iceBackground = document.querySelector('.background-image');
-    if (iceBackground) iceBackground.style.transform = `translateX(-${scrollPercent * 50}%)`;
 });
 
 
