memberupdate modal 크기 조절

--- a/Design/index.html
+++ b/Design/index.html
@@ -516,19 +516,19 @@
                 </div>
                 <div class="row">
                     <span class="title_content">이미지 url</span>
-                    <input class="txtfield" type="url" id="update_imgurl" ></input>
+                    <input class="txtfield" type="url" id="update_imgurl"/>
                 </div>
                 <div class="row">
                     <span class="title_content">이름</span>
-                    <input class="txtfield" type="text" id="update_name" disabled></input>
+                    <input class="txtfield" type="text" id="update_name" disabled/>
                 </div>
                 <div class="row">
                     <span class="title_content">mbti</span>
-                    <input class="txtfield" type="text" id="update_mbti" ></input>
+                    <input class="txtfield" type="text" id="update_mbti"/>
                 </div>
                 <div class="row">
                     <span class="title_content">블로그 주소</span>
-                    <input class="txtfield" type="text" id="update_blogaddress" ></input>
+                    <input class="txtfield" type="text" id="update_blogaddress"/>
                 </div>
                 <div class="row">
                     <span class="title_content big">자신의 장점</span>
