edit,delete style update

--- a/Design/index.html
+++ b/Design/index.html
@@ -80,8 +80,8 @@
                     console.log(currentUserEmail)
                     if (isCurrentUser) {
                         // 현재 사용자가 데이터의 소유자라면 버튼을 표시
-                        editButton.style.display = 'block';
-                        deleteButton.style.display = 'block';
+                        editButton.style.display = 'inline-block';
+                        deleteButton.style.display = 'inline-block';
                     } else {
                         // 그렇지 않다면 버튼을 숨김
                         editButton.style.display = 'none';
